# txt-template

./: .gitignore  README.md
Cli/: README.md
Notes/: README.md  grammar.md  grammer.md  tokens.md
Templates/: README.md
Templates/templ-parse/: Cargo.toml
Templates/templ-parse/src/: lib.rs  main.rs  parse.rs  scan.rs  token.rs
Templates/templ-parse/tests/: parse_response.rs  random-gens.sh
Templates/txt-templ-parser/: Cargo.toml
Templates/txt-templ-parser/src/: Makefile  content.rs  language_translator.cpp  lexar.h  lib.rs  parse.rs  parser.h  scan.rs  token.rs  tokens.h  utils.h  variables.h
Templates/txt-templ-parser/tests/: grammar.bnf  parse_response.rs
Templates/wasm-txt-templ/: Cargo.toml
Templates/wasm-txt-templ/site/: index.html  index.js  package-lock.json  package.json
Templates/wasm-txt-templ/src/: lib.rs
