[package]
name = "templ-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4.17"
env_logger = "0.10.0"
once_cell = "1"
unic-locale = { version = "0.9.1", features = ["macros"] }
[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.1"
