[package]
name = "txt-templ-parser"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
thiserror = "1"
log = "0.4.17"
env_logger = "0.10.0"
once_cell = "1"
unic-locale = { version = "0.9.1", features = ["macros"] }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.1"
