[package]
name = "wasm-txt-templ"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
txt-templ-parser = { version = "0.1.0", features = ["serde"], path = "../txt-templ-parser" }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
